Working on test for sync handler

--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
 		"log_path" : "/home/waf3l",
 		"logging_level" : "DEBUG",
 		"logging_directory" : ".mirror",
-		"logging_stdout" : true,
+		"logging_stdout" : false,
 		"logging_debug_to_file" : true
 	},
 
